--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href={% static 'css/global.css' %}>
     <link rel="stylesheet" href={% static 'css/styles.css' %}>
+    <script src="https://kit.fontawesome.com/653eb1b940.js" crossorigin="anonymous"></script>
     <title>{% block title %}{% endblock title %}</title>
 </head>
 
