Render registration form

--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -3,4 +3,6 @@
 
 {% block content %}
 <h1>This will be the register page</h1>
+{{ form.as_p }}
+<button type="submit">Register</button>
 {% endblock content %}
