--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -3,6 +3,12 @@
 
 {% block content %}
 <h1>This will be the register page</h1>
-{{ form.as_p }}
-<button type="submit">Register</button>
+<form method="post">{% csrf_token %}
+    {% for field in form.visible_fields %}
+    <div class="field">
+        {{ field.label_tag }} {{ field }}
+    </div>
+    {% endfor %}
+    <button type="submit">Register</button>
+</form>
 {% endblock content %}
