Make fontsize responsive

--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -1,5 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@400;600;800;900&display=swap");
 
+// Breakpoints
+$bp-small: 48em; // 768px
+$bp-medium: 64em; // 1024px
+$bp-large: 85.375em; // 1366px
+$bp-xlarge: 120em; // 1920px
+$bp-xxlarge: 160em; // 2560px
+
+// Media Queries
+$mq-small: "(min-width: #{$bp-small})";
+$mq-medium: "(min-width: #{$bp-medium})";
+$mq-large: "(min-width: #{$bp-large})";
+$mq-xlarge: "(min-width: #{$bp-xlarge})";
+$mq-xxlarge: "(min-width: #{$bp-xxlarge})";
+$mq-retina: "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)";
+
+// Font-Size
+$base-font-size: 1em;
+
+// Line-Height
+$base-line-height: 1.5;
+$header-line-height: 1.25;
+
 *,
 *::before,
 *::after {
@@ -18,7 +40,25 @@ body {
 html {
     box-sizing: border-box;
     font-family: "Catamaran", sans-serif;
-    font-size: 16px;
+    font-size: $base-font-size;
+    line-height: $base-line-height;
+
+    @media #{$mq-medium} {
+        font-size: $base-font-size*0.75;
+        line-height: $base-line-height*0.75;
+    }
+
+    @media #{$mq-large} {
+        font-size: $base-font-size*1;
+    }
+
+    @media #{$mq-xlarge} {
+        font-size: $base-font-size*2;
+    }
+
+    @media #{$mq-xxlarge} {
+        font-size: $base-font-size*3;
+    }
 }
 
 body {
@@ -32,12 +72,6 @@ a:focus {
     text-decoration: none;
 }
 
-button {
-    cursor: pointer;
-    color: #f1f1f1;
-    border: none;
-    background-color: #0c0c0c;
-}
 
 @for $i from 1 through 6 {
     h#{$i} {
@@ -47,10 +81,37 @@ button {
 }
 
 input {
-    font-family: "Font Awesome 5 Free", "Catamaran", sans-serif;
-    font-weight: 900;
+    color: #f1f1f1;
+    border: none;
+
+    &::placeholder {
+        font-family: "Font Awesome 5 Free", "Catamaran", sans-serif;
+        font-weight: 900;
+        color: currentColor;
+    }
 }
 
 .container {
-    margin: 0 5rem;
+    height: 100%;
+    margin: 0 10vw;
+}
+
+.btn {
+    cursor: pointer;
+    color: #f1f1f1;
+    border: none;
+    border-radius: 5px;
+    background-color: #0c0c0c;
+    padding: 0.5em 1em;
+    font-family: "Catamaran", sans-serif;
+    font-size: 0.95rem;
+    font-weight: 600;
+
+    &:hover {
+        box-shadow: 0 0 3px 0 currentColor;
+    }
+
+    &.primary {
+        background-color: #4821b3;
+    }
 }
