--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
 
 <body>
 
+    {% include 'navbar.html' %}
+
     <div class="container">
         {% block content %}
         {% endblock content %}
