--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@400;600;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@100;400;600;800;900&display=swap");
 
 // Breakpoints
 $bp-small: 48em; // 768px
@@ -62,7 +62,7 @@ html {
 }
 
 body {
-    background-color: #141c31;
+    background: linear-gradient(90deg, #516395, #614385);
     color: #f1f1f1;
 }
 
