--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,14 +1,11 @@
+{% load static %}
 <header id="navbar">
-    <h3>MAnime</h3>
+    <a class="logo" href=""><img src="{% static 'imgs/text_logo.svg' %}" alt="manime-logo"></a>
     <nav>
-        <a href="">Home</a>
-        <a href="">Profile</a>
-        <a href="">Anime List</a>
-        {% if not user.is_authenticated %}
-        <a href="{% url 'authentication:login' %}">Login</a>
-        <a href="{% url 'authentication:register' %}">Register</a>
-        {% else %}
-        <a href="{% url 'authentication:logout' %}?next={{ request.path }}">Logout</a>
-        {% endif %}
+        {% with url_name=request.resolver_match.url_name %}
+        <a class="{% if url_name == 'home' %}active{% endif %}" href="">Home</a>
+        <a class="{% if url_name == 'profile' %}active{% endif %}" href="">Profile</a>
+        <a class="{% if url_name == 'anime_list' %}active{% endif %}" href="">Anime</a>
+        {% endwith %}
     </nav>
 </header>
