--- a/static/scss/navbar.scss
+++ b/static/scss/navbar.scss
@@ -1,8 +1,51 @@
 #navbar {
-    position: fixed;
+
+    font-size: 1rem;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem 10vw;
+    padding: 1em 10vw;
     width: 100%;
+
+    .logo {
+        height: fit-content;
+
+        img {
+            height: 4em;
+        }
+    }
+
+    h3 {
+        display: flex;
+
+        span {
+            font-weight: 100;
+            font-size: .5em;
+            align-self: center;
+            margin-left: 2px;
+        }
+    }
+
+    nav {
+
+        display: flex;
+        flex-direction: column;
+        font-size: 1.5em;
+
+        a {
+            color: rgba(#f1f1f1, 0.75);
+            flex: 1 1 50%;
+            font-weight: 100;
+
+            &.active {
+                color: #f1f1f1;
+            }
+
+            &:not(:first-child),
+            &:not(:last-child) {
+                margin: 0.75em;
+            }
+        }
+
+    }
+
 }
