--- a/authentication/static/scss/styles.scss
+++ b/authentication/static/scss/styles.scss
@@ -5,51 +5,66 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    height: 100%;
-
-    @media (max-width:980px) {
-        margin: 2em 0;
-    }
 
     .authentication-form {
 
         border-radius: 0.5em;
-        background-color: #050c2c;
         padding: 2em;
-        flex-grow: 1;
 
-        .text-container {
-            text-align: center;
+        h1 {
+            font-size: 2.5em;
+            text-transform: uppercase;
 
-            h3,
-            p {
-                margin: 0
+            span {
+                padding-right: 1.5em;
             }
         }
 
         .field {
+
             border-radius: 0.25em;
-            background: #181d44;
-            padding: 1em;
+            border: 0.15em solid rgba(#f1f1f1, 0.5);
             display: flex;
             flex-direction: column;
-            margin: 1em 0;
+            margin: 2.5em 0;
 
-            .label-container {
-                margin-bottom: 0.25em;
+            legend {
+                padding: 0 0.5em;
             }
 
             input {
-                background-color: #050c2c;
+                background-color: transparent;
                 font-size: 1em;
                 border-radius: 0.25em;
                 padding: 0.5em;
+                width: 100%;
+                margin: 0;
             }
+
+            .error-msg {
+                padding: 1em 0.45em;
+            }
+
         }
 
-        button {
-            font-size: 1em;
-            width: 100%;
+        .actions {
+
+            text-align: center;
+
+            button {
+                font-size: 1em;
+                width: 100%;
+            }
+
+            .links {
+                display: flex;
+                flex-direction: column;
+
+                a {
+                    margin: 0.25em;
+                }
+            }
+
         }
 
     }
