--- a/static/scss/colours.scss
+++ b/static/scss/colours.scss
@@ -1,5 +1,3 @@
-$bg-main-1: #516395;
-$bg-main-2: #614385;
-
-$default-btn: #0c0c0c;
-$primary: #764385;
+$btn-clr: #0c0c0c;
+$primary-1: #516395;
+$primary-2: #614385;
